--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,40 +55,40 @@ jobs:
     
         
   # Builds with DFU_UPDATE_BUILD=1        
-  build_dfu:
-    runs-on: ubuntu-20.04
-    strategy:
-      # devices to build for
-      matrix:
-        #board: [PUCKJS, PIXLJS, MDBT42Q, BANGLEJS, BANGLEJS2, PUCKJS_MINIMAL]
-        board:  [WHISKER]
-      # try and build for all devices even if one fails
-      fail-fast: false 
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0    
-    - name: make ${{ matrix.board }}
-      env:
-        TRAVIS: 1
-        RELEASE: 1
-        DFU_UPDATE_BUILD: 1
-        BOARD: ${{ matrix.board }} 
-        UPLOADTOKEN: ${{ secrets.UPLOADTOKEN }}  
-      run: |
-        source ./scripts/provision.sh  ${{ matrix.board }}
-        make
-        ./scripts/ci_upload.sh       
-    - name: Upload ${{ matrix.board }} build artifact
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        name: ${{ matrix.board }}
-        path: |
-          bin/*.bin
-          bin/*.hex
-          bin/*.tgz
-          bin/*.zip
-       
+#  build_dfu:
+#    runs-on: ubuntu-20.04
+#    strategy:
+#      # devices to build for
+#      matrix:
+#        #board: [PUCKJS, PIXLJS, MDBT42Q, BANGLEJS, BANGLEJS2, PUCKJS_MINIMAL]
+#        board:  [WHISKER]
+#      # try and build for all devices even if one fails
+#      fail-fast: false
+#    steps:
+#    - uses: actions/checkout@v3
+#      with:
+#        fetch-depth: 0
+#    - name: make ${{ matrix.board }}
+#      env:
+#        TRAVIS: 1
+#        RELEASE: 1
+#        DFU_UPDATE_BUILD: 1
+#        BOARD: ${{ matrix.board }}
+#        UPLOADTOKEN: ${{ secrets.UPLOADTOKEN }}
+#      run: |
+#        source ./scripts/provision.sh  ${{ matrix.board }}
+#        make
+#        ./scripts/ci_upload.sh
+#    - name: Upload ${{ matrix.board }} build artifact
+#      uses: actions/upload-artifact@v3.1.2
+#      with:
+#        name: ${{ matrix.board }}
+#        path: |
+#          bin/*.bin
+#          bin/*.hex
+#          bin/*.tgz
+#          bin/*.zip
+#
   # Builds with PAD_FOR_BOOTLOADER=1
 #  build_padded:
 #    runs-on: ubuntu-20.04
