--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       # devices to build for
       matrix:
         #board: [LINUX, ESP32, ESP8266_BOARD, ESP8266_4MB, MICROBIT1, MICROBIT2]
-        board:  [WHISKER]
+        board:  [NRF52840DK]
       # try and build for all devices even if one fails
       fail-fast: false 
     steps:
