updating workflow to capture app hex

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
           bin/*.hex
           bin/*.tgz
           bin/*.zip
+          bin/*.app_hex
     
         
   # Builds with DFU_UPDATE_BUILD=1        
